[gd_scene load_steps=4 format=2]

[ext_resource path="res://Top-down Tanks Redux/PNG/Retina/bulletBlue1_outline.png" type="Texture" id=1]
[ext_resource path="res://Bullets/Bullet.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 10.0

[node name="Bullet" type="Area2D" groups=["Bullet"]]
script = ExtResource( 2 )

[node name="BulletBlue1Outline" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="bullet_collided"]
